--- a/about/about.css
+++ b/about/about.css
@@ -49,6 +49,7 @@ div {
 body {
   font-family: var(--main-font);
   font-weight: 400;
+  font-size: 16px;
   margin: 0;
   background-color: #000;
 }
@@ -138,7 +139,7 @@ header hr {
 .content-4 .content,
 .content-5 .content,
 footer .content {
-  max-width: var(--width-max);
+  max-width: min(var(--width-max), 90%);
   margin: 0 auto;
   position: relative;
 }
@@ -199,7 +200,9 @@ footer .content {
 }
 
 .phone-images img {
-  width: 440px;
+  width:90%;
+  max-width: 440px;
+
 }
 
 .phone-images {
@@ -263,12 +266,15 @@ footer .content {
   box-shadow: 8px 12px 26px 0 rgba(0, 0, 0, 0.05);
 }
 
-.content-2 .content li img {
-  width: 20%;
-  max-width: 180px;
+.content-2 .content li .image-wrapper{
+  width: 20%; 
   padding: 0 0 60px 0;
 }
 
+.content-2 .image-wrapper img{
+  width:100%;  
+  max-width: 180px;
+}
 .content-2 li h3 {
   font-size: 1.2em;
   color: var(--color-main);
@@ -315,6 +321,7 @@ footer .content {
 }
 
 .content-3 img {
+  width:90%;
   margin: auto 0 auto auto;
 }
 
@@ -360,18 +367,45 @@ clip-path: ellipse(70% 100% at center top);
   background-color: var(--color-sub1);
 }
 
-footer {
-  text-align: center;
-  padding: 80px 0;
+footer{
   background-color: #fff;
-  color: var(--color-gray);
+}
+footer .content {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  font-size: 0.8em;
+  padding: 20px 0;
+  color: var(--color-gray); 
+}
+
+footer .sub-context{
+  padding: 5px;
+}
+
+footer p{
+  margin: 0;
+}
+
+footer a{
+  text-decoration: none;
 }
 
 footer img {
-  width: 20px;
+  width: 200px;
   vertical-align: middle;
 }
+footer .right-margin {
+  margin-right: 20px;
+}
 
+footer .copyrights{
+  display: block;
+  /* justify-content: space-between;  */
+} 
+
+
+/*
 @media (max-width:1400px) {
 
   .content-1 .content,
@@ -383,9 +417,34 @@ footer img {
     max-width: 90%;
   }
 }
+*/
 
 /*pc*/
-@media (min-width: 581px) and (max-width: 1080px) {}
+@media (min-width: 581px) and (max-width: 1080px) {
+
+  .content-2 ol {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .content-2 li{
+    display: flex; 
+  }
+  .content-2 .content li .image-wrapper{
+    width: 20%; 
+    padding: 0;
+    margin-right: 50px;
+  }
+
+  .content-3 .content{
+    flex-flow: column-reverse;
+  }
+
+  .content-3 .image-wrapper{
+    margin: 0 0 50px 0;
+  }
+}
 
 /*mobile phone*/
 @media (max-width: 580px) {
@@ -400,7 +459,7 @@ footer img {
   .content-4 .content,
   .content-5 .content,
   footer .content {
-    margin: 0 60px;
+    margin: 70px 45px;
   }
 
   .content-1,
@@ -413,12 +472,15 @@ footer img {
   }
 
   .phone-images img {
-    margin: 0px 15px;
-  }
+    margin: 0px 50px;
+  } 
 
   .content-2 ol {
     display: flex;
     flex-direction: column;
     padding: 0;
   }
+  .content-3 .content{
+   flex-direction: column;  
+  } 
 }
